--- a/wxDoctor/pages/patientinfo/patientinfo.wxml
+++ b/wxDoctor/pages/patientinfo/patientinfo.wxml
@@ -2,7 +2,7 @@
 <view class="container patientinfo">
   <scroll-view class="patient-inner" scroll-y style="height: 100%;">
     <view class="patientinfo-list" wx:for="{{info}}" wx:for-index="idx" wx:key="ptinfo">
-      <view data-index="{{idx}}" bindtouchstart="changeBg" bindtouchend="goPay" class="{{selId==idx ? 'bg' :''}}">
+      <view data-index="{{idx}}" bindtouchstart="changeViewBg" bindtouchend="goPay" class="{{viewBg ? 'bg' :''}}">
         <view class="patientinfo-list-top">
             <text class="list-top-text">{{item.name}}</text>
             <text class="list-top-text" wx:if="{{item.gender}}">{{item.gender==1 ? '男' : '女'}}</text>
@@ -14,15 +14,15 @@
         </view>
       </view>
       <view class="patientinfo-list-bot">
-        <view class="list-bot-img g-tac" data-index="{{idx}}" bindtap="delPt">
-            <image src="../../images/patient/ico_trash.png"></image>
+        <view class="list-bot-img g-tac" data-index="{{idx}}" data-text="del" bindtouchstart="changeBg" bindtouchend="delPt" style="background-color: {{item.delBg}}">
+            <text>删除</text>
         </view>
-        <view class="list-bot-img g-tac" data-index="{{idx}}" bindtap="editPt">
-          <image src="../../images/patient/ico_write.png"></image>
+        <view class="list-bot-img g-tac" data-index="{{idx}}" data-text="edit" bindtouchstart="changeBg" bindtouchend="editPt" style="background-color:{{item.editBg}}">
+          <text>编辑</text>
         </view>
       </view>
     </view>
   </scroll-view>
-  <button class="bottom-btn g-tac" bindtap="addPt"><image class="img-add" src="../../images/login/ico_add.png"/>新增就诊人</button>
+  <button class="bottom-btn g-tac" bindtouchstart="changeBtnBg" bindtouchend="addPt" style="background-color: {{btnBg}}"><image class="img-add" src="../../images/login/ico_add.png"/>新增咨询者</button>
   <text class="tip-show" wx:if="{{tipShow}}">{{tipMsg}}</text>
 </view>
