--- a/wxDoctor/pages/wallet/wallet.wxml
+++ b/wxDoctor/pages/wallet/wallet.wxml
@@ -1,41 +1,42 @@
 <view class="container wallet">
-  <view class="wallet-list">
-    <view class="list-inner">
-      <text class="list-inner-tit">钱包余额：</text>
-      <view class="list-inner-r">
-        <text class="list-inner-money">{{info.balance ? info.balance /100 : 0}}</text>
-        <text class="list-inner-unit">元</text>
-      </view>
-    </view>
-    <view class="list-inner">
-      <text class="list-inner-tit">历史总收入：</text>
-      <view class="list-inner-r">
-        <text class="list-inner-money">{{info.total ? info.total/100 :0}}</text>
-        <text class="list-inner-unit">元</text>
-      </view>
+  <view class="list-inner">
+    <text class="list-inner-tit">钱包余额：</text>
+    <view class="list-inner-r">
+      <text class="list-inner-money">{{info.balance ? info.balance /100 : 0}}</text>
+      <text class="list-inner-unit">元</text>
     </view>
   </view>
-  <view class="wallet-list">
-    <view class="list-inner">
-      <text class="list-inner-tit">提现中：</text>
-      <view class="list-inner-r">
-        <text class="list-inner-money">{{info.draw? info.draw/100 : 0}}</text>
-        <text class="list-inner-unit">元</text>
-      </view>
+  <view class="list-inner">
+    <text class="list-inner-tit">历史总收入：</text>
+    <view class="list-inner-r">
+      <text class="list-inner-money">{{info.total ? info.total/100 :0}}</text>
+      <text class="list-inner-unit">元</text>
     </view>
-    <view class="list-inner">
-      <text class="list-inner-tit">历史提现金额：</text>
-      <view class="list-inner-r">
-        <text class="list-inner-money">{{info.totaldraw ? info.totaldraw/100: 0}}</text>
-        <text class="list-inner-unit">元</text>
-      </view>
+  </view>
+  <view class="list-inner">
+    <text class="list-inner-tit">提现中：</text>
+    <view class="list-inner-r">
+      <text class="list-inner-money">{{info.draw? info.draw/100 : 0}}</text>
+      <text class="list-inner-unit">元</text>
+    </view>
+  </view>
+  <view class="list-inner">
+    <text class="list-inner-tit">历史提现金额：</text>
+    <view class="list-inner-r">
+      <text class="list-inner-money">{{info.totaldraw ? info.totaldraw/100: 0}}</text>
+      <text class="list-inner-unit">元</text>
     </view>
   </view>
   <input class="g-tac wallet-ipt" placeholder-class="wallet-ipt-plhd" placeholder="请输入提现金额"
     value="{{money}}"
     bindinput="makeDraw"
     focus="{{feeFocus}}"></input>
-  <button bindtap="applyPay" disabled="{{info.balance<info.mindraw}}" class="btn" >提现</button>
+  <input class="g-tac wallet-ipt" placeholder-class="wallet-ipt-plhd" placeholder="请输入提现密码"
+    maxlength="6"
+    value="{{psd}}"
+    focus="{{codeFocus}}"
+    bindinput="makeBtnstatus"></input>
+  <button bindtap="checkCode" disabled="{{btnDisable&&info.balance<info.mindraw}}" class="btn" >提现</button>
   <text class="mindraw-tip">最低提现金额为50元</text>
   <text class="mindraw-tip wallet-ipt-plhd">申请提现后会有工作人员联系您</text>
   <text class="tip-show" wx:if="{{tipShow}}">{{tipMsg}}</text>
