--- a/wxDoctor/pages/setcode/setcode.wxml
+++ b/wxDoctor/pages/setcode/setcode.wxml
@@ -1,5 +1,5 @@
 <view class="container">
-  <text class="g-tac setcode-title">请设置您的提现密码\n用于咨询费提现</text>
+  <text class="g-tac setcode-title">{{title}}</text>
   <form class="form-area" bindsubmit="formSubmit">
     <view class="section">
       <input class="setcode-ipt g-tac" name="password" maxlength="6" bindfocus="checkValfocus" bindblur="checkVal" value="{{password}}" placeholder="请设置6位数字密码" type="password" placeholder-class="holder-ipt"/>
@@ -13,4 +13,5 @@
       <button class="btn" formType="submit" disabled="{{btnDisable}}">确认</button>
     </view>
   </form> 
+  <text class="tip-show" wx:if="{{tipShow}}">{{tipMsg}}</text>
 </view>
