--- a/wxDoctor/app.wxss
+++ b/wxDoctor/app.wxss
@@ -98,3 +98,37 @@ page,view,text,input,button,image,textarea{
 button::after {
   border: 0;
 }
+/** 闪屏  **/
+.splash {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 20;
+}
+.splash-img {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+.splash-sec {
+  position: absolute;
+  top: 40rpx;
+  right: 40rpx;
+  padding: 20rpx 30rpx;
+  font-size: 28rpx;
+  color: #fff;
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 8rpx;
+} 
+.use-btn {
+  width: 420rpx;
+  line-height: 100rpx;
+  position: absolute;
+  left: 50%;
+  bottom: 100rpx;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  border-radius: 50rpx;
+}
