--- a/wxDoctor/pages/setcode/setcode.wxml
+++ b/wxDoctor/pages/setcode/setcode.wxml
@@ -14,4 +14,9 @@
     </view>
   </view> 
   <text class="tip-show" wx:if="{{tipShow}}">{{tipMsg}}</text>
+  <view class="splash" wx:if="{{second>=0}}">
+    <image class="splash-img" src="http://img.yunxingzh.com/9274c830-284c-4853-8ee4-958339691702.png"/>
+    <view class="splash-sec" bindtap="jump">{{second}} 跳过</view>
+    <button class="btn use-btn" bindtouchstart="changeColor" bindtouchend="goUse" style="background-color: {{btnUseBg}}">使用说明</button>
+  </view>
 </view>
