--- a/wxDoctor/pages/index/index.wxml
+++ b/wxDoctor/pages/index/index.wxml
@@ -1,7 +1,7 @@
 <!--index.wxml-->
 <view wx:if="{{viewShow}}" class="container">
   <image bindtap="bindViewTap" class="reset-img" src="../../images/login/img_ownpic.png" background-size="cover"></image>
-  <text class="reset-welcome g-tac">欢迎使用健康莞家\n请输入您的手机号与密码进行注册</text>
+  <text class="reset-welcome g-tac">欢迎使用健康莞家</text>
   <view class="reset-ipt">
     <image class="ipt-icon" src="../../images/login/loading_icon_phone.png"></image>
     <input class="ipt-phone" placeholder-class="res-holder" placeholder="请输入手机号" 
@@ -19,10 +19,5 @@
     <text class="res-code g-tac" bindtap="getCode">{{codeText}}</text>
   </view>
   <button class="btn" bindtouchstart="changeColor" bindtouchend="makeReg" style="background:{{btnBg}}">注册</button>
-  <text class="res-tip g-tac">登录您的账号将与本微信绑定\n下次无需登录，如需更换微信请联系\n0755-86700641</text>
   <text class="tip-show" wx:if="{{tipShow}}">{{tipMsg}}</text>
-  <view class="splash" wx:if="{{second>=0}}">
-    <image class="splash-img" src="../../images/login/loading_hospital.png"/>
-    <view class="splash-sec" bindtap="jump">{{second}} 通过</view>
-  </view>
 </view>
