--- a/wxDoctor/pages/index/index.wxml
+++ b/wxDoctor/pages/index/index.wxml
@@ -8,14 +8,15 @@
     bindinput="makePhone"
     value="{{phone}}"
     focus="{{phoneFocus}}"
+    maxlength="11"
     ></input>
   </view>
-  <view class="reset-ipt reset-ipt2">
+  <view class="reset-ipt">
     <image class="ipt-icon" src="../../images/login/loading_icon_key.png"></image>
-    <input class="ipt-phone2" placeholder-class="res-holder" placeholder="请输入验证码"
+    <input class="ipt-phone" placeholder-class="res-holder" placeholder="请输入验证码"
     focus="{{codeFocus}}" 
     value="{{code}}" 
-    bindinput="makeCode" ></input>
+    bindinput="makeCode" maxlength="6"></input>
     <text class="res-code g-tac" bindtap="getCode">{{codeText}}</text>
   </view>
   <button class="btn" bindtouchstart="changeColor" bindtouchend="makeReg" style="background:{{btnBg}}">注册</button>
