--- a/wxDoctor/pages/drchat/drchat.wxml
+++ b/wxDoctor/pages/drchat/drchat.wxml
@@ -17,8 +17,8 @@
       bindscroll="scroll"
       scroll-top="{{scrollTop}}"
       scroll-into-view="{{toView}}">
-    <view wx:for="{{chatLists}}" wx:for-index="idx" id="{{'list'+ item.seq}}">
-      <text class="g-tac drchat-time" wx:if="{{item.timeshow}}">{{item.ctime}}</text>
+    <view wx:for="{{chatLists}}" wx:key="id" wx:for-index="idx" id="{{'list'+ item.seq}}">
+      <text class="g-tac drchat-time" wx:if="{{item.timeshow}}">{{item.timestr}}</text>
       <view wx:if="{{item.flag}}" class="drchat-r">
         <image class="drchat-head-r" src="{{item.drHead}}"/>
         <view wx:if="{{item.type==1}}" class="drchat-msg-r">
