--- a/wxDoctor/pages/patientchat/patientchat.wxml
+++ b/wxDoctor/pages/patientchat/patientchat.wxml
@@ -1,6 +1,6 @@
 <view class="container drchat" wx:if="{{mounted}}">
   <text class="patient-tit g-tac">您已进入医生咨询室，快提出您的问题吧</text>
-  <scroll-view class="drchat-info" scroll-y style="height: 100%;"
+  <scroll-view class="drchat-info" scroll-y style="height:100%;"
       bindscrolltoupper="upper"
       bindscrolltolower="lower"
       bindscroll="scroll"
@@ -37,6 +37,8 @@
       value="{{iptVal}}"
       focus="{{iptFocus}}"
       cursor-spacing="20"
+      bindfocus="onFocus"
+      bindblur="onBlur"
       bindconfirm="tapSub"
       confirm-hold="true"
       confirm-type="send"/>
