--- a/wxDoctor/pages/drchat/drchat.wxml
+++ b/wxDoctor/pages/drchat/drchat.wxml
@@ -1,11 +1,12 @@
 <view class="container drchat" wx:if="{{mounted}}">
   <view class="drchat-menu" wx:if="{{!end}}">
-    <view class="menu-pait g-tac" bindtap="getPatient" style="color:{{ptColor}}">获取咨询者信息</view>
+    <view class="menu-pait g-tac" bindtap="getPatient" style="color:{{ptColor}}">查看咨询人信息</view>
     <view class="colorb2a g-tac" bindtap="endInquiry">结束咨询</view>
   </view>
   <view wx:else class="menu-end g-tac">该咨询者已结束咨询</view>
   <view class="dr-patient" wx:if="{{patientShow}}">
     <view class="dr-patient-info">
+      <view class="close" bindtap="getPatient">关闭</view>
       <view class="info-list"><text class="weight500">基本信息：</text><text>{{ptInfo.name}}</text><text wx:if="{{ptInfo.gender}}">{{ptInfo.gender==1 ? '  男  ' : '  女  '}}</text><text wx:if="{{ptInfo.age}}">{{ptInfo.age}}岁</text></view>
       <view class="info-list"><text class="weight500">医疗卡号：</text><text>{{ptInfo.mcard || '无'}}</text></view>
       <view class="info-list"><text class="weight500">联系电话：</text><text>{{ptInfo.phone}}</text></view>
