--- a/wxDoctor/pages/drchat/drchat.wxss
+++ b/wxDoctor/pages/drchat/drchat.wxss
@@ -60,7 +60,7 @@
 }
 .dr-patient-info {
   width: 100%;
-  /*height: 280rpx;*/
+  position:relative;
   padding: 30rpx 34rpx;
   background-color: #fff;
   border: 1rpx solid #1ed2af;
@@ -257,4 +257,11 @@
   background-color: #1cc5a4;
   color: #fff;
   border: 0;
+}
+.close {
+  position:absolute;
+  right: 40rpx;
+  top: 30rpx;
+  font-size: 28rpx;
+  color: #919191;
 }
