--- a/wxDoctor/pages/drconfirm/drconfirm.wxml
+++ b/wxDoctor/pages/drconfirm/drconfirm.wxml
@@ -7,13 +7,13 @@
     <view class="confrim-list"><text>所属科室</text>{{info.department}}</view>
     <view class="confrim-list confrim-ipt-list">
       <text class>设置门诊费</text>
-      <input class="mon-ipt" type="text" 
-        value="{{iptMoney}}" 
-        focus="{{iptFocus}}" 
+      <input class="mon-ipt" type="text"
+        value="{{iptMoney}}"
+        focus="{{iptFocus}}"
         bindinput="bindFeeInput" placeholder="单位元">{{info.fee}}</input>
-      <button class="mon-btn" bindtouchstart="changeColor" bindtouchend="saveFee" style="background-color: {{btnBg}}">保存</button>
+      <button class="mon-btn" bindtouchstart="changeColor" bindtouchend="saveFee" style="background-color: {{btnBg}}">修改</button>
     </view>
-    <text class="drconfirm-tip g-tac">如个人信息有误，请联系\n0755-86700641</text>
+    <text class="drconfirm-tip g-tac">如个人信息有误，请联系\n0769-21660569</text>
     <view class="img-box img-box2">
         <image class="drconfirm-codeimg " src="{{codeImg}}" data-src="{{codeImg}}" bindtap="previewImg"/>
     </view>
