--- a/wxDoctor/pages/patientinfo/patientinfo.wxml
+++ b/wxDoctor/pages/patientinfo/patientinfo.wxml
@@ -2,7 +2,7 @@
 <view class="container patientinfo">
   <scroll-view class="patient-inner" scroll-y style="height: 100%;">
     <view class="patientinfo-list" wx:for="{{info}}" wx:for-index="idx" wx:key="ptinfo">
-      <view data-index="{{idx}}" bindtouchstart="changeViewBg" bindtouchend="goPay" class="{{viewBg ? 'bg card' :'card'}}">
+      <view data-index="{{idx}}" bindtouchstart="changeViewBg" bindtouchend="goPay" class="{{viewBg ? 'bg' :''}}">
         <view class="patientinfo-list-top">
             <text class="list-top-text">{{item.name}}</text>
             <text class="list-top-text" wx:if="{{item.gender}}">{{item.gender==1 ? '男' : '女'}}</text>
@@ -12,6 +12,7 @@
         <view class="patientinfo-list-top patientinfo-list-mid">
           <text class="list-top-text">{{item.phone}}</text>
         </view>
+        <text class="card">咨询</text>
       </view>
       <view class="patientinfo-list-bot">
         <view class="list-bot-img g-tac" data-index="{{idx}}" data-text="del" bindtouchstart="changeBg" bindtouchend="delPt" style="background-color: {{item.delBg}}">
