聊天区域看不见 token失败重试

--- a/wxDoctor/pages/binddrlist/list.wxss
+++ b/wxDoctor/pages/binddrlist/list.wxss
@@ -56,7 +56,8 @@
   font-weight: 500;
 }
 .text-sty {
-  width: auto;
+  display: block;
+  width: 100%;
   padding: 10rpx 0;
   font-size: 26rpx;
   background-color: #60c64b;
