--- a/wxDoctor/pages/drconfirm/drconfirm.wxml
+++ b/wxDoctor/pages/drconfirm/drconfirm.wxml
@@ -1,6 +1,7 @@
+<import src="../template/drcodeinfo/drcodeinfo.wxml"/>
 <view class="container">
   <scroll-view class="drconfirm">
-    <image class="drconfirm-head" src="{{info.headurl}}"></image>
+    <image class="drconfirm-head" src="{{info.headurl}}" bindtap="changeHead"/>
     <view class="confrim-list"><text>姓名</text>{{info.name}}</view>
     <view class="confrim-list"><text>职称</text>{{info.title}}</view>
     <view class="confrim-list"><text>所属医院</text>{{info.hospital}}</view>
@@ -10,18 +11,34 @@
       <input class="mon-ipt" type="text"
         value="{{iptMoney}}"
         focus="{{iptFocus}}"
-        bindinput="bindFeeInput" placeholder="单位元">{{info.fee}}</input>
-      <button class="mon-btn" bindtouchstart="changeColor" bindtouchend="saveFee" style="background-color: {{btnBg}}">修改</button>
+        bindinput="bindFeeInput" 
+        placeholder="单位元"
+        disabled="{{iptDisable}}">{{info.fee}}</input>
+      <button class="mon-btn" bindtouchstart="changeColor" bindtouchend="saveFee" style="background-color: {{btnBg}}">{{btnText}}</button>
     </view>
     <text class="drconfirm-tip g-tac">如个人信息有误，请联系\n0769-21660569</text>
-    <view class="img-box img-box2">
-        <image class="drconfirm-codeimg " src="{{codeImg}}" data-src="{{codeImg}}" bindtap="previewImg"/>
+    <view class="drconfirm-drinfo-content">
+      <view class="img-box">
+        <template is="item" data="{{info: info}}"/>
+        <image class="drconfirm-codeimg" src="{{codeImg}}" data-src="{{codeImg}}" bindtap="previewImg"/>
+      </view>
     </view>
     <text class="dr-text g-tac"><text class="coloraf"></text>让咨询者扫描此二维码，即可接收咨询\n建议<text style="color: #24cb9f">截图保存</text>二维码</text>
   </scroll-view>
   <view class="preview-code" wx:if="{{viewCode}}" bindtap="viewShow">
-    <image src="{{codeImg}}"/>
+    <image class="preview-img" src="{{codeImg}}"/>
     <text class="img-tip">点击屏幕即可关闭图片</text>
+  </view>
+  <view class="preview-code" wx:if="{{editHead}}">
+    <view class="edithead-inner">
+      <view class="edithead-list" bindtap="chooseHead">从手机相册中选择</view>
+      <text class="edit-line"></text>
+      <view class="edithead-list" bindtap="cancelEdit">取消</view>
+    </view>
+  </view>
+  <view class="preview-code" wx:if="{{checkHead}}">
+    <image class="checkhead-img" src="{{newHead}}" style="width: 100%;height: {{imgHeight}}"/>
+    <view class="checkhead-btn"><button bindtap="cancelCheck">取消</button><button bindtap="makeHead">确定</button></view>
   </view>
   <text class="tip-show" wx:if="{{tipShow}}">{{tipMsg}}</text>
 </view>
