--- a/wxDoctor/pages/drpatient/drpatient.wxml
+++ b/wxDoctor/pages/drpatient/drpatient.wxml
@@ -23,6 +23,7 @@
         <view class="info-text">
           <text class="info-text-name">{{item.nickname}}</text>
           <text class="info-text-chat g-ellipsis" wx:if="{{item.type}}">{{item.type==1 ? item.content : '[图片]'}}</text>
+          <text class="info-text-chat g-ellipsis" wx:else>-</text>
         </view>
         <view class="info-text info-text2">
           <text class="pay-sign end-sign" wx:if="{{item.status==2}}">已结束</text>
@@ -41,7 +42,7 @@
       </view>
     </view>
     <text class="doctorcode-text g-tac">
-        让咨询者扫描此二维码，即可接收咨询\n*二维码也可在【个人中心】找到\n建议截图保存二维码
+        让咨询者扫描此二维码，即可接收咨询\n*<text class="color9f">二维码</text>和<text class="color9f">使用说明</text>可在【个人中心】找到
     </text>
   </view>
   <view class="preview-code" wx:if="{{viewCode}}" bindtap="viewShow">
