--- a/wxDoctor/pages/patientchat/patientchat.wxss
+++ b/wxDoctor/pages/patientchat/patientchat.wxss
@@ -141,6 +141,7 @@
   color: #fff;
   background-color: #1ed2af;
   margin: 0;
+  border: 0;
 }
 .red {
   height: 100rpx;
@@ -156,6 +157,7 @@
   top: 0;
   left: 0;
   background-color: #f0eff5;
+  border: 2rpx solid #dcdcdc;
 }
 .end-btn {
   background-color: #c9c9c9;
@@ -165,4 +167,85 @@
 }
 .padd50 {
   padding-top: 65%;
+}
+.patient-refund {
+  position: fixed;
+  top:0;
+  left: 0;
+}
+.refund-btn {
+  width: 156rpx;
+  padding: 0 22rpx;
+  line-height: 60rpx;
+  font-size: 28rpx;
+  position: absolute;
+  top: 20rpx;
+  right: 28rpx;
+  margin-top:0;
+}
+.view-refund-hidden {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+}
+.refound-inner {
+  width: 516rpx;
+  height: auto;
+  padding: 60rpx 44rpx;
+  border-radius: 10rpx;
+  background-color: #ffffff;
+  box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.2);
+  margin: 280rpx auto 0;
+}
+.refound-inner-tit {
+  display: block;
+  font-size: 36rpx;
+  margin-bottom: 10rpx;
+}
+.refound-inner-grop {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.refound-inner-label {
+  display: block;
+  width: 50%;
+  height: auto;
+  font-size: 32rpx;
+  margin-top: 24rpx;
+}
+.refound-inner-radio {
+  transform:scale(.8);
+}
+.refond-inner-btn {
+  width: 100%;
+  line-height: 80rpx;
+  margin-top: 44rpx;
+  border-radius: 10rpx;
+  background-color: #1cc5a4;
+  color: #fff;
+  font-size: 32rpx;
+}
+.refont-inner-text {
+  display: block;
+  margin-top: 24rpx;
+  font-size: 28rpx;
+  color: #f1001e;
+}
+.patientchat-end-tit {
+  margin-bottom: 36rpx;
+}
+.patientchat-end-text {
+  display: block;
+  font-size: 32rpx;
+  margin-bottom: 44rpx;
+}
+.colc9 {
+  background-color: #c9c9c9;
 }
