--- a/wxDoctor/pages/drpatient/drpatient.wxml
+++ b/wxDoctor/pages/drpatient/drpatient.wxml
@@ -26,12 +26,14 @@
           <text class="info-text-chat g-ellipsis" wx:else>-</text>
         </view>
         <view class="info-text info-text2">
+          <text class="pay-sign" wx:if="{{item.status==1}}">已付费</text>
           <text class="pay-sign end-sign" wx:if="{{item.status==2}}">已结束</text>
-          <text class="pay-sign" wx:else>已付费</text>
+          <text class="pay-sign end-sign" wx:if="{{item.status==3}}">退款中</text>
           <text class="info-text-time">{{item.ctime}}</text>
         </view>
       </view>
     </view>
+    <text class="drpatient-tip g-tac">请尽快回复咨询者，超过8小时咨询者可能会申请退款</text>
   </scroll-view>
   <view wx:else class="con-inner">
      <view class="drpatient-norelation g-tac">暂时未收到咨询</view>
